<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FlySafe</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="ReportAdapterYesInvalid">Yes (invalid)</string>
    <string name="ReportAdapterYesValid">Yes (valid)</string>
    <string name="ReportAdapterYesResolved">Yes (resolved)</string>
    <string name="No">No</string>
    <string name="Unknown">Unknown</string>
    <string name="Accident">Accident</string>
    <string name="Incident">Incident</string>
    <string name="reports">reports</string>
    <string name="aircrafts">aircraft</string>
    <string name="mine">mine</string>
    <string name="search">search</string>
    <string name="NoReportsFound">No reports found</string>
    <string name="FieldCantBeEmpty">This field can\'t be left empty</string>
    <string name="aircraft">aircraft</string>
    <string name="Search">Search</string>
    <string name="Reports">Reports</string>
    <string name="SafetyRecommendations">Safety Recommendations</string>
    <string name="AddAircraft">Add Aircraft</string>
    <string name="Registration">Registration</string>
    <string name="Type">Type</string>
    <string name="Add">Add</string>
    <string name="NewReport">New Report</string>
    <string name="Date">Date</string>
    <string name="Narrative">Narrative</string>
    <string name="SetLocation">Set Location</string>
    <string name="ClearLocation">Clear Location</string>
    <string name="Report">Report</string>
    <string name="Notifications">Notifications</string>
    <string name="Person">Person</string>
    <string name="Category">Category</string>
    <string name="Text">Text</string>
    <string name="Location">Location</string>
    <string name="AircraftsM">Aircraft</string>
    <string name="Validated">Validated</string>
    <string name="LatestReports">Latest Reports</string>
    <string name="MyReports">My Reports</string>
    <string name="AircraftAlreadyAdded">This aircraft has already been added</string>
    <string name="InvalidDateFormat">Invalid date format, use yyyy-MM-dd</string>
    <string name="AddAtLeastOneAircraft">You must add at least one aircraft</string>
    <string name="RemoveAircraftQ">Remove aircraft?</string>
    <string name="Airplane">Airplane</string>
    <string name="Helicopter">Helicopter</string>
    <string name="Experimental">Experimental</string>
    <string name="Drone">Drone</string>
    <string name="Logout">Logout</string>
    <string name="Help">Help</string>
    <string name="Exit">Exit</string>
    <string name="Home">Home</string>
    <string name="News">News</string>
    <string name="Stats">Stats</string>
    <string name="ReportsMap">Reports map</string>
    <string name="YourReportFrom">"Your report from "</string>
    <string name="HasBeenAccepted">" has been accepted"</string>
    <string name="HasBeenInvestigated">" has been investigated"</string>
    <string name="HasBeenRejected">" has been rejected"</string>
    <string name="IsAwaitingApproval">" is awaiting approval"</string>
    <string name="Search2">Search</string>
    <string name="Language">Language</string>
    <string name="contact">Contact</string>
    <string name="web_url">Web: <a href="https://webapp-0.firebaseapp.com/">https://webapp-0.firebaseapp.com/</a></string>
    <string name="email">Email: <a href="mailto:flysafe@yopmail.com">flysafe@yopmail.com</a></string>
    <string name="postal">Postal: Av. Corrientes 2037 CABA</string>
    <string name="phone">Phone: <a href="tel:1121795054">1121795054</a></string>
    <string name="help">Help</string>
    <string name="version">Version: 1.4.3 (dec 2019)</string>
    <string name="user_manual">User manual: <a href="https://goo.gl/HCgwd1">Link</a></string>
    <string name="installation_manual">Installation manual: <a href="https://goo.gl/HCgwd1">Link</a></string>
    <string name="title_activity_terms_and_conditions">Terms and conditions</string>
    <string name="terms_and_conditions">
<b>1) OBLIGATIONS OF THE PROVIDER</b>\n
The developer of the FlySafe platform, the SUPPLIER, provided an aeronautical event reporting notification system, for the users of the platform onwards USERS.\n
-The SUPPLIER, has the obligation to publish the code of the application on the website of FlySafe, in addition to providing help manuals and a support email.\n
-The SUPPLIER, update the web platform and keep updated and available the application for mobile devices with Android 4.4.2 or higher.\n
-The SUPPLIER will make sure to comply with the personal data protection regulations for the Argentine Republic (Law 25.326) and all aspects related to the security of information.\n
<b>2) USER OBLIGATIONS</b>\n
The USER must use FlySafe, according to the regulations and laws in force. In case FlySafe is used by third parties, it will be the sole responsibility of the USER to specify FlySafe must be used in accordance with current regulations and laws.\n
<b>3) MODIFICATIONS TO THE TERMS AND CONDITIONS</b>\n
FlySafe can modify the Terms and Conditions at any time, making them public on the Site, the USER must use the via email if he does not accept them; In that case, the contractual link would be dissolved. Upon expiration of this term, it is considered that the user accepts the new terms and the contract will continue to bind the parties.\n
<b>4) PRICES, LICENSE</b>\n
FlySafe is free to use, licensed by GPLv3 or higher, (General Public License).\n
<b>5) TERMINATION OR CANCELLATION OF THE SERVICE</b>\n
The flightSafe service will end when, in addition to the legally established causes and those provided in the different clauses of these Terms and Conditions, there is one of the following:\n
At any time, in the USER, see your willingness to cancel or no longer use FlySafe, by communicating to the SUPPLIER.\n
Resolution for breach of any part of the parties of the obligations.\n
At the SUPPLIER\'s discretion and when I have it available, said circumstance must be said in the USER and / or User within a reasonable time.\n
<br />
In any case of resolution, termination, rescission, cancellation or termination of the contract for any legal reason or by which is stipulated in the current terms and conditions, the USER will not be entitled to the subscriber\'s legend, nor will it be apportioned of the amount paid against the time you have measured between the use of the SERVICE and the end of it.\n
<b>5) OBLIGATION OF THE PROVIDER IN THE CONFIDENTIALITY AND SECURITY OF DATA, FILES, DOCUMENTS AND USER INFORMATION\n
OBLIGATION AND DUTY OF CONFIDENTIALITY OF THE PROVIDER</b>\n
<br />
All commercial information, including as such: data, files, documents, photographs, images, commercial documents, commercial business, operations and financial, accounting, legal, administrative nature of another nature that includes financial statements, operating history, financial projections, plans commercial and marketing, information about USERS, databases, contracts related to its purpose, compilations and development information, studies and other documents prepared by legal advisors, accountants or other representatives or third parties, information of its partners or shareholders that the USER and / or User store or send the server hired by the SUPPLIER by using the SOFTWARE and / or the SERVICE, IS CONSIDERED CONFIDENTIAL INFORMATION AND EXCLUSIVE PROPERTY OF THE USER.\n
<br />
In this context, the SUPPLIER undertakes to maintain the confidentiality of all commercial information that the USER and / or User has stored by virtue of the use of the SOFTWARE.\n
Said information will be kept in reserve by the SUPPLIER, who assumes the duty and obligation not to disclose it in any way, in whole or in part, to any individual or legal entity that is not part of the Contract.\n
<br />
Any information that becomes public, that which has to be disclosed in accordance with the laws or with a judicial resolution or imperative act of a competent authority and that obtained by a third party that does not, is excluded from the category of confidential business information. is under the obligation of confidentiality.\n
<br />
Neither party (SUPPLIER, USER and / or User) will acquire any right over any commercial information or other property rights of the other party as a result of this contract.
    </string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="faq">FAQ</string>
<string name="faqs">
1. What can I report?\n
 &#8226; Aviation accidents, incidents of civil aircraft (aircraft, helicopters, gliders, drones, etc.)\n
2. Does it have legal consequences?\n
 &#8226; No, the reports are only for the purpose of avoiding future events.\n
3. Is FlySafe available for iOS?\n
 &#8226; No, it is currently available for Android and web browsers.\n
4. My report was not validated. Why?\n
 &#8226; Reports are evaluated, if they do not fit into an aviation event, it will not be valid.\n
</string>
    <string name="account">Account</string>
    <string name="account_data">Account data</string>
    <string name="user_name">User name:</string>
    <string name="user_type">User type:</string>
    <string name="user_standard">Standard</string>
    <string name="delete_account">Delete account</string>
    <string name="account_deleted">Your account has been deleted</string>
    <string name="email_sent">An email has been sent to your inbox</string>
    <string name="email_error">Error sending the verification mail, try again later</string>
    <string name="delete_acount_mbox">Delete account</string>
    <string name="delete_account_q_mbox">Reauthentication is required to delete your account. Do you want to delete it?</string>
    <string name="user_admin">Administrator</string>
</resources>
