<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/Notifications" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/News" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/Stats" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/ReportsMap" />
    </group>
</menu>