<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.gob.jiaac.flysafe.fragments.HelpFragment"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="24sp"
        android:layout_marginBottom="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_marginBottom="16sp" />

    <TextView
        android:id="@+id/userManualLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_manual"
        android:layout_marginBottom="16sp" />

    <TextView
        android:id="@+id/installationManualLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/installation_manual" />

</LinearLayout>
