<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ar.gob.jiaac.flysafe.fragments.ContactFragment"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16sp"/>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="128sp"
        app:srcCompat="@drawable/ic_fs_launcher"
        android:gravity="center_horizontal"
        android:layout_marginBottom="24sp" />

    <TextView
        android:id="@+id/webLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:text="@string/web_url" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/postalLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:text="@string/postal" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone" />
</LinearLayout>
