<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.gob.jiaac.flysafe.fragments.NewAircraftFragment"
    android:padding="8dp">


    <TableRow android:layout_weight="0">
        <TextView android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AddAircraft"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow android:layout_weight="0">
        <TextView android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Registration" />

        <EditText android:layout_weight="7"
            android:id="@+id/editTextRegistration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="LV-XXX"
            android:text="" />
    </TableRow>

    <TableRow android:layout_weight="0">
        <TextView android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Type" />

        <Spinner android:layout_weight="7"
            android:id="@+id/spinnerAircraftType"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow android:layout_weight="1">
        <Button android:layout_weight="1"
            android:id="@+id/buttonAddAircraft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/Add" />
    </TableRow>
</TableLayout>
